# aim-aie7-demo-day

./: .gitignore  ACP_CONSOLIDATION_PLAN.md  Makefile  README.md  RESTAURANT_A2A_SETUP.md  TRANSACTION_SIMULATOR_SPEC.md  agentic-web-whitepaper.md  debug_a2a_client.py  debug_import.py  docker-compose.yml  exec-summary.md  notes.md  plan.md  start_restaurant_demo.sh  stop_restaurant_demo.sh  test_acp_client.py  test_docker_setup.py  test_docker_setup.sh
apps/acp-mcp/: README.md  pyproject.toml
apps/acp-mcp/src/acp_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
apps/acp-sdk/: AGENT_CAPABILITIES.md  README.md  REFACTORING_COMPARISON.md  SKILL_ARCHITECTURE.md  main.py  pyproject.toml
apps/acp-sdk/examples/: llamaindex_restaurant_agent.py  otto_portland_example.py  simple_restaurant_agent.py  unified_restaurant_example.py
apps/acp-sdk/src/acp_sdk/: __init__.py  executor.py  models.py  skills.py
apps/acp-sdk/src/acp_sdk/a2a/: __init__.py  agent_frameworks.py  core.py  exceptions.py  executor.py  server.py  skills.py
apps/acp-sdk/src/acp_sdk/discovery/: __init__.py  gor_client.py  ingestion.py  registry.py  vector_search.py
apps/acp-sdk/src/acp_sdk/mcp/: __init__.py  a2a_client.py  acp_mcp.py
apps/acp-sdk/src/acp_sdk/models/: __init__.py  offers.py  osf.py  postbacks.py  receipts.py  wallets.py
apps/acp-sdk/src/acp_sdk/txns/: __init__.py  privacy.py  server.py  wallet_manager.py
apps/consumer-agent-cli/: Dockerfile  Makefile  README.md  pyproject.toml  test_cli.py
apps/consumer-agent-cli/src/consumer_agent/: __init__.py  __main__.py  cli.py  config.py  mcp_client.py
apps/gor-api/: Dockerfile  Makefile  README.md  docker-compose.yml  ingest_offers.py  pyproject.toml  test_gor.py
apps/gor-api/src/gor/: __init__.py  main.py
apps/gor-api/src/gor/models/: offer_models.py
apps/gor-api/src/gor/services/: embedding_service.py  gor_service.py  search_service.py
apps/mcp-offers/: .dockerignore  Dockerfile  Makefile  README.md  mcp_reference_server.py  pyproject.toml  test_mcp_server.py
apps/mcp-offers/src/mcp_offers/: __init__.py  __main__.py  config.py  gor_client.py  models.py  server.py
apps/mcp-restaurant-client/: Makefile  README.md  pyproject.toml  test_mcp_client.py
apps/mcp-restaurant-client/src/mcp_restaurant_client/: __init__.py  __main__.py  a2a_client.py  server.py
apps/mock-restaurants/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_restaurants.py
apps/mock-restaurants/newicks-lobster-house/: main.py
apps/mock-restaurants/newicks-lobster-house/data/: menu.json
apps/mock-restaurants/otto-portland/: main.py
apps/mock-restaurants/otto-portland/data/: menu.json
apps/mock-restaurants/otto-portland/data/.well-known/offers/: ofr_001.json
apps/mock-restaurants/shared/: __init__.py  models.py  transaction_logic.py
apps/mock-restaurants/toast-street-exeter/: main.py
apps/mock-restaurants/toast-street-exeter/data/: menu.json
apps/mock-restaurants/toast-street-exeter/data/.well-known/offers/: ofr_001.json  ofr_002.json
apps/offer-scraper/: Dockerfile  generate_offers.py  package.json  requirements.txt  run_generator.py
apps/offer-scraper/config/: restaurants.txt
apps/offer-scraper/src/: add-url.js  batch-scraper.js  generator.js  mock-data.js  scraper.js  server.js  url-loader.js
apps/restaurant-agents/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_a2a_integration.py  test_acp_agents.py
apps/restaurant-agents/shared/: __init__.py  agent_template.py  models.py
apps/tx-simulator/: Dockerfile  pyproject.toml
apps/tx-simulator/src/tx_simulator/: main.py  models.py  wallet_manager.py
apps/txn-simulator-acp/: Dockerfile  README.md  pyproject.toml  test_setup.py
apps/txn-simulator-acp/src/txn_simulator_acp/: __init__.py  main.py
data/osf/toast_newick's_lobster_house/.well-known/: osf.json
data/osf/toast_newick's_lobster_house/.well-known/offers/: ofr_001.json  ofr_002.json
data/osf/toast_otto_portland/.well-known/: osf.json
data/osf/toast_otto_portland/.well-known/offers/: ofr_002.json
data/osf/toast_street_exeter_8_clifford_street/.well-known/: osf.json
examples/a2a/client/: __init__.py  a2a_client.py  agent.py  main.py
