[project]
name = "mcp-restaurant-client"
version = "0.1.0"
description = "MCP server that wraps an A2A client for restaurant interactions"
authors = [
    {name = "Demo Team", email = "demo@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "a2a-sdk>=0.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]
requires-python = ">=3.10"

[project.scripts]
mcp-restaurant-client = "mcp_restaurant_client.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
